# foxy-old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  foxy-osx.cmake  foxy.cmake
cmake/: FoxyConfig.cmake.in
cmake.modules/: ParseAndAddCatchTests.cmake
include/foxy/: async_read_body.hpp  async_result.hpp  client.hpp  connection.hpp  coroutine.hpp  header_parser.hpp  listener.hpp  log.hpp  make_acceptor.hpp  make_route.hpp  make_v4_endpoint.hpp  match_route.hpp  parse_string_view.hpp  pmr.hpp  remove_dead_connections.hpp  route.hpp  rule_matcher.hpp  session.hpp  string_view.hpp  timeout.hpp  timeout_connections.hpp  type_traits.hpp
include/foxy/detail/: client.hpp  stop_io_context.hpp
include/foxy/handlers/: not_found.hpp
include/foxy/pmr/: fields.hpp  flat_buffer.hpp  parser.hpp  string_body.hpp
src/: connection.cpp  listener.cpp  log.cpp  make_acceptor.cpp  make_v4_endpoint.cpp  not_found.cpp  session.cpp
test/: allocator_client_test.cpp  async_read_body_test.cpp  client_test.cpp  listener_test.cpp  mp11_test.cpp  proto_client_test.cpp  remove_dead_connections_test.cpp  route_test.cpp  server_test.cpp  timeout_test.cpp  timer_test.cpp
test/include/foxy/test/: fail_counter.hpp  stream.hpp
